# my_portfolio

./: .env  README.md  pyproject.toml  requirements.txt
myapp/: admin.py  forms.py  models.py  urls.py  views.py
myapp/migrations/: 0001_initial.py
portfolio/: settings.py  urls.py
static/: style.css
templates/: index.html
